syntax = "proto3";
package common_library;
option java_multiple_files = true;
option java_package = "com.assignment.common_library";

service AccountService{

  rpc DeleteAccount(AccountRequest) returns (AccountResponse);
  rpc GetAccountByUsername(AccountRequest) returns (AccountResponse);
}

message AccountRequest {

  int64 id = 1;
  string username = 2;
  bool status = 3;
}

message AccountResponse {

  int64 id = 1;
  string role = 2;
  string username = 3;
  string phone = 4;
  string email = 5;
  bool state = 6;
  bool status = 7;
  bool isExist = 8;
  bool isDeleteSucceed = 9;
}